Adiciona interface de usuário a main e reformata código